--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,8 @@ dependencies {
     // CorDapp dependencies.
     cordapp project(":workflows")
     cordapp project(":contracts")
+    cordapp project(":oracle-flows")
+    cordapp project(":oracle-service")
 
     cordaCompile "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
     cordaCompile "org.apache.logging.log4j:log4j-web:${log4j_version}"
@@ -103,7 +105,7 @@ dependencies {
 
 cordapp {
     info {
-        name "CorDapp supplychain"
+        name "CorDapp Snakes And Ladders"
         vendor "Corda Open Source"
         targetPlatformVersion corda_platform_version
         minimumPlatformVersion corda_platform_version
@@ -135,6 +137,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
 
         cordapp project(":contracts")
         cordapp project(":workflows")
+        cordapp project(":oracle-flows")
         runSchemaMigration = true
     }
     node {
@@ -145,7 +148,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
             address("localhost:10003")
             adminAddress("localhost:10043")
         }
-        cordapps = []
+        cordapps.clear();
     }
     node {
         name "O=ClassicGames,L=London,C=GB"
@@ -165,6 +168,18 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         }
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
 
+    }
+    node {
+        name "O=Oracle,L=Mumbai,C=IN"
+        p2pPort 10011
+        rpcSettings {
+            address("localhost:10012")
+            adminAddress("localhost:10052")
+        }
+        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
+        cordapps.clear();
+        cordapp project(":oracle-service")
+        cordapp project(":oracle-flows")
     }
 }
 task installQuasar(type: Copy) {
