--- a/workflows/build.gradle
+++ b/workflows/build.gradle
@@ -6,7 +6,7 @@ cordapp {
     targetPlatformVersion corda_platform_version
     minimumPlatformVersion corda_platform_version
     workflow {
-        name "supplychain Flows"
+        name "Snakes And Ladder Flows"
         vendor "Corda Open Source"
         licence "Apache License, Version 2.0"
         versionId 1
@@ -57,6 +57,7 @@ dependencies {
 
     // CorDapp dependencies.
     cordapp project(":contracts")
+    cordapp project(":oracle-flows")
 
     //Account dependencies
     cordaCompile "$confidential_id_release_group:ci-workflows:$confidential_id_release_version"
